--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "testdev": "webpack-dev-server --mode-development --open --hot",
     "dev": "nodemon ./src/server/server.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,25 +14,43 @@
     "@types/koa-views": "^2.0.3",
     "@types/react-redux": "^5.0.14",
     "antd": "^3.0.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-react": "^6.24.1",
     "cross-env": "^5.1.1",
     "ejs": "^2.5.7",
+    "html-webpack-plugin": "^3.2.0",
     "koa": "^2.4.1",
     "koa-router": "^7.3.0",
     "koa-views": "^6.1.3",
+    "mini-css-extract-plugin": "^0.4.0",
     "nodemon": "^1.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-hot-loader": "^4.2.0",
+    "react-loadable": "^5.4.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "typescript": "^2.6.2"
+    "typescript": "^2.6.2",
+    "webpack-dev-server": "^3.1.4"
   },
   "devDependencies": {
-    "ts-node": "^4.0.1",
-    "@types/react-router": "^4.0.19",
     "@types/koa": "^2.0.42",
     "@types/koa-router": "^7.0.27",
     "@types/react": "^16.0.30",
-    "@types/react-dom": "^16.0.3"
+    "@types/react-dom": "^16.0.3",
+    "@types/react-router": "^4.0.19",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^0.28.11",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "ts-node": "^4.0.1",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3"
   }
 }
