--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.1.1",
     "ejs": "^2.5.7",
+    "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
     "koa": "^2.4.1",
     "koa-router": "^7.3.0",
@@ -33,6 +35,7 @@
     "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
     "typescript": "^2.6.2",
     "webpack-dev-server": "^3.1.4"
