--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "redial": "^0.5.0",
     "redux": "^3.7.2",
     "typescript": "^2.6.2",
     "webpack-dev-server": "^3.1.4"
