--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "testdev": "webpack-dev-server --mode-development --open --hot",
     "dev": "nodemon ./src/server/server.dev.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "testdev2": "webpack-dev-server --hot --inline --config ./webpack/webpack.config.client.babel.js --port 3000 --colors --display-error-details",
+    "server:dev": "webpack --watch --config ./webpack/webpack.config.server.babel.js --colors --display-error-details"
   },
   "author": "",
   "license": "ISC",
@@ -14,12 +16,14 @@
     "@types/koa-views": "^2.0.3",
     "@types/react-redux": "^5.0.14",
     "antd": "^3.0.1",
+    "assets-webpack-plugin": "^3.5.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.1.1",
     "ejs": "^2.5.7",
+    "file-loader": "^1.1.11",
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
     "koa": "^2.4.1",
@@ -27,6 +31,8 @@
     "koa-views": "^6.1.3",
     "mini-css-extract-plugin": "^0.4.0",
     "nodemon": "^1.12.7",
+    "nprogress": "^0.2.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.2.0",
@@ -39,6 +45,8 @@
     "redial": "^0.5.0",
     "redux": "^3.7.2",
     "typescript": "^2.6.2",
+    "universal-webpack": "^0.6.5",
+    "url-loader": "^1.0.1",
     "webpack-dev-server": "^3.1.4"
   },
   "devDependencies": {
