--- a/webpack/universal-webpack-settings.json
+++ b/webpack/universal-webpack-settings.json
@@ -2,6 +2,6 @@
 	"server":
 	{
 		"input": "./src/server/index.js",
-		"output": "./build/server/server.js"
+		"output": "./dist/server/server.js"
 	}
 }
