--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "testdev": "webpack-dev-server --mode-development --open --hot",
-    "dev": "nodemon ./src/server/server.dev.js",
+    "dev": "run-p client:dev server:dev",
     "test": "echo \"Error: no test specified\" && exit 1",
     "testdev2": "webpack-dev-server --hot --inline --config ./webpack/webpack.config.client.babel.js --port 3000 --colors --display-error-details",
-    "server:dev": "webpack --watch --config ./webpack/webpack.config.server.babel.js --colors --display-error-details"
+    "client:dev": "webpack-dev-server --hot --inline --config ./webpack/webpack.config.client.babel.js --port 3001 --colors --display-error-details",
+    "server:dev": "run-p server:dev:webpack server:dev:start",
+    "server:dev:webpack": "webpack --watch --config ./webpack/webpack.config.server.babel.js --colors --display-error-details",
+    "server:dev:start": "nodemon ./webpack/start.server.js --exec babel-node --watch ./dist/server"
   },
   "author": "",
   "license": "ISC",
@@ -17,10 +19,12 @@
     "@types/react-redux": "^5.0.14",
     "antd": "^3.0.1",
     "assets-webpack-plugin": "^3.5.1",
+    "babel-cli": "^6.26.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
     "cross-env": "^5.1.1",
     "ejs": "^2.5.7",
     "file-loader": "^1.1.11",
@@ -31,6 +35,7 @@
     "koa-views": "^6.1.3",
     "mini-css-extract-plugin": "^0.4.0",
     "nodemon": "^1.12.7",
+    "npm-run-all": "^4.1.3",
     "nprogress": "^0.2.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
