--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "client:dev": "webpack-dev-server --hot --inline --config ./webpack/webpack.config.client.babel.js --port 3001 --colors --display-error-details",
     "server:dev": "run-p server:dev:webpack server:dev:start",
     "server:dev:webpack": "webpack --watch --config ./webpack/webpack.config.server.babel.js --colors --display-error-details",
-    "server:dev:start": "nodemon ./webpack/start.server.js --exec babel-node --watch ./dist/server"
+    "server:dev:start": "nodemon ./webpack/start.server.js --exec babel-node --watch ./dist/server",
+    "prepare-server-build": "universal-webpack --settings ./webpack/universal-webpack-settings.json prepare"
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +31,7 @@
     "file-loader": "^1.1.11",
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy": "^1.17.0",
     "koa": "^2.4.1",
     "koa-router": "^7.3.0",
     "koa-views": "^6.1.3",
@@ -81,6 +83,7 @@
     "plugins": [
       "syntax-dynamic-import",
       "react-hot-loader/babel",
+      "react-loadable/babel",
       [
         "transform-runtime",
         {
