--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "koa": "^2.4.1",
     "koa-router": "^7.3.0",
     "koa-views": "^6.1.3",
+    "koa-webpack-middleware": "^1.0.7",
     "mini-css-extract-plugin": "^0.4.0",
     "nodemon": "^1.12.7",
     "npm-run-all": "^4.1.3",
