--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "run-p client:dev server:dev",
+    "dev": "npm run client:dev & npm run server:dev:webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
     "testdev2": "webpack-dev-server --hot --inline --config ./webpack/webpack.config.client.babel.js --port 3000 --colors --display-error-details",
-    "client:dev": "webpack-dev-server --hot --inline --config ./webpack/webpack.config.client.babel.js --port 3001 --colors --display-error-details",
+    "client:dev": "webpack-dev-server --hot --inline --config ./webpack/webpack.config.babel.js --port 3001 --colors --display-error-details",
     "server:dev": "run-p server:dev:webpack server:dev:start",
     "server:dev:webpack": "webpack --watch --config ./webpack/webpack.config.server.babel.js --colors --display-error-details",
     "server:dev:start": "nodemon ./webpack/start.server.js --exec babel-node --watch ./dist/server",
@@ -55,6 +55,8 @@
     "typescript": "^2.6.2",
     "universal-webpack": "^0.6.5",
     "url-loader": "^1.0.1",
+    "webpack-assets-info-plugin": "^1.0.2",
+    "webpack-chunk-manifest-plugin": "^3.0.2",
     "webpack-dev-server": "^3.1.4"
   },
   "devDependencies": {
