--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
-        "target": "es5",
+        "module": "es2015",
+        "target": "es2017",
+        "allowSyntheticDefaultImports": true,
+        "allowJs": true,
         "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": true,
-        "outDir": "dist",
+        "outDir": "dist/server",
         "jsx": "react",
         "lib": [
             "es2015"
@@ -19,6 +21,6 @@
         // }
     },
     "include": [
-        "src/server/**/*"
+        "src/server/app.tsx"
     ]
 }
