--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "server:pro": "run-s server:pro:webpack server:pro:start",
     "server:pro:webpack": "webpack --config ./webpack/webpack.config.server.babel.js --colors --display-error-details",
     "server:pro:start": "node ./dist/server",
-
-
     "prepare-server-build": "universal-webpack --settings ./webpack/universal-webpack-settings.json prepare",
     "test": "echo \"Error: no test specified\" && exit 1",
     "testdev2": "webpack-dev-server --hot --inline --config ./webpack/webpack.config.client.babel.js --port 3000 --colors --display-error-details"
@@ -24,7 +22,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/koa-views": "^2.0.3",
+    "@types/react-loadable": "^5.4.0",
     "@types/react-redux": "^5.0.14",
+    "@types/react-router-config": "^1.0.7",
+    "@types/react-router-dom": "^4.2.7",
+    "@types/react-router-redux": "^5.0.15",
     "antd": "^3.0.1",
     "assets-webpack-plugin": "^3.5.1",
     "babel-cli": "^6.26.0",
@@ -60,7 +62,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "redial": "^0.5.0",
     "redux": "^3.7.2",
-    "typescript": "^2.6.2",
+    "typescript": "^2.9.2",
     "universal-webpack": "^0.6.5",
     "url-loader": "^1.0.1",
     "webpack-assets-info-plugin": "^1.0.2",
